Fixed a bug in the Card/Deck service where the result wasn't being returned. Fixed a z-index issue where the dialog was under the context menu button. Fixed the URLs on the deck manager to forward mode=raw properly to the deck editor.

--- a/yugi/js_src/deck/editor/ui/deck-editor.css
+++ b/yugi/js_src/deck/editor/ui/deck-editor.css
@@ -2,11 +2,12 @@
  * The CSS for the deck editor.
  */
 
+.yugi-selection {
+	float: left;
+}
+
 .yugi-deck-editor-swapper {
-	display: inline-block;
-	margin-left: 20px;
-	vertical-align: top;
-	width: 660px;
+	margin-left: 240px;
 }
 
 .yugi-deck-browser-container {
