--- a/yugi/js_src/ui/dialog.css
+++ b/yugi/js_src/ui/dialog.css
@@ -19,6 +19,7 @@
   color: #000;
   padding: 4px;
   position: absolute;
+  z-index: 100;
 }
 
 .modal-dialog a,
